Tests and Swagger