@@ -4,6 +4,12 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.4'
 }
 
+configurations {
+	all {
+		exclude group: 'commons-logging', module: 'commons-logging'
+	}
+}
+
 group = 'pl.edu.pwr.pkuchnowski'
 version = '1.0'
 
@@ -22,10 +28,12 @@ dependencies {
 	implementation 'com.google.api-client:google-api-client:2.0.0'
 	implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
 	implementation 'com.google.apis:google-api-services-script:v1-rev20220323-2.0.0'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+	jvmArgs('-XX:+EnableDynamicAgentLoading')
 }
 
 bootJar {
@@ -45,3 +53,5 @@ javadoc {
 	}
 	destinationDir = file("build/docs/javadoc")
 }
+
+
